# pipxhelloworld

./: pyproject.toml
pipxhelloworld/: main.py
