[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipxhelloworld"
version = "0.0.1"
requires-python = "==3.12.*"
dependencies = [
    "requests"
]

[project.scripts]
pipxhelloworld = "pipxhelloworld.main:main"

[tool.poe.tasks]
run = "pipxhelloworld"

